--- a/backend/package.json
+++ b/backend/package.json
@@ -1,1 +1,24 @@
-{ "dependencies": { "express": "^5.1.0" } }
+{
+    "scripts": {
+        "dev": "bun run src/index.ts"
+    },
+    "dependencies": {
+        "@types/ffmpeg": "^1.0.7",
+        "cors": "^2.8.5",
+        "dotenv": "^17.2.2",
+        "express": "^5.1.0",
+        "ffmpeg": "^0.0.4",
+        "fluent-ffmpeg": "^2.1.3",
+        "multer": "^2.0.2",
+        "youtube-dl-exec": "^3.0.25"
+    },
+    "devDependencies": {
+        "@types/cors": "^2.8.19",
+        "@types/express": "^5.0.3",
+        "@types/fluent-ffmpeg": "^2.1.27",
+        "@types/multer": "^2.0.0",
+        "@types/node": "^24.5.1",
+        "typescript": "^5.9.2",
+        "ts-node": "^10.9.2"
+    }
+}
